--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -81,7 +81,7 @@
 <p><br/>主題簡述:</p>
 <p>在工地裡,經常需要用到台車搬運東西,例如裝著水泥的箱子,如果是要靠人力搬運的話,不僅會造成工作效率的減少,也會使搬運人員的體力大量消耗,所以討論過後,我們小組決定設計”省力搬運機”,不僅解決搬運問題,也大幅地提高工作效率與人員體力的損耗。</p>
 <h2>W11 討論小組主題</h2>
-<p><strong data-mce-new="true">4月29討論結果</strong><br/><strong>主題:暫定<span>飛機或是汽車等之後再更改</span></strong></p>
+<p><strong>4月29討論結果</strong><br/><strong>主題:暫定<span>飛機或是汽車等之後再更改</span></strong></p>
 <p><strong><span><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/qo33Pq-pSV8" width="560"></iframe></span></strong></p>
 <h2>W12 無障礙越野車繪製</h2>
 <p>1.<strong>stage3主題:無障礙越野車</strong></p>
@@ -107,6 +107,18 @@
 <p>4.更改底板，因應前面所有改動，底板必須符合邏輯的變化</p>
 <p><img alt="" height="205" src="https://40823220.github.io/cd2021/images/777.bmp" width="400"/></p>
 <p>修改完成使零件數目減少後，使攀爬機在CoppeliaSim中可以順利完成地形攀爬模擬。</p>
+<p>------------------------------------------------------------------------------------------------</p>
+<p>零件圖</p>
+<p>1.組合底板</p>
+<p><img alt="" height="284" src="/images/組合底板.png" width="525"/></p>
+<p>2.組合副底板</p>
+<p><img alt="" height="284" src="/images/組合副底板.png" width="525"/></p>
+<p>3.蝸桿</p>
+<p><img alt="" height="284" src="/images/蝸桿.png" width="525"/></p>
+<p>4.蝸輪</p>
+<p><img alt="" height="284" src="/images/蝸輪.png" width="525"/></p>
+<p>5.輪胎</p>
+<p><img alt="" height="284" src="/images/輪胎.png" width="525"/></p>
 <p></p>
 <h2>W12-13coppelia模擬</h2>
 <p>小組作品進度</p>
@@ -455,6 +467,24 @@ else:
 <h2>Stage 3</h2>
 <h1>期末報告 PDF</h1>
 <h1>小組個人心得</h1>
+<h2>40823204 賴惟嘉</h2>
+<p>這學期學到了很多工具，包含<br/>coppelia 場景的建立以及許多程式的寫法，原本以為自<br/>己完蛋了，因為高中只學過如何畫圖卻沒接觸過程式和<br/>coppelia 這套工具，但是有努力終有成果，經過這幾週<br/>的洗禮，我也熟悉了這些操作，然後在程式的部分我還<br/>有不足處，還需要去學習，同時也很感謝40823214 教了<br/>我許多。</p>
+<h2>40823205 李詩涵</h2>
+<p>後期因為github 被鎖讓我摸索了很<br/>久，還是沒辦法解封，還好之後有fossil 能夠讓我再呈<br/>現我的網站出來，只是比較麻煩一點點而已，在這學期<br/>真的學到了很多東西，主要是CoppeliaSim，一開始看到<br/>是全英文讓我感到很害怕，但後來慢慢摸索就有懂一些<br/>了，英文真的很重要。在w16 的考試多虧有同學的幫助<br/>也學到了很多，雖然我的程式一直模擬不出來，但我還<br/>是反覆的做跟思考如何解決，並求助同學的幫忙，也謝<br/>謝組員們的幫助。</p>
+<h2>40823220 黃彥維 </h2>
+<p>經過這學期的洗禮，我學會了是<br/>CoppeliaSim 以及Onshape 這兩套軟體，還有Lua 跟Py<br/>thon 程式的基本認知，還有更多的附加知識，例如<br/>Youtobe 的剪片上字幕，產品商業化會遇到的問題等<br/>等，但最重要的就是團隊合作，讓我們整體的工作，對<br/>每個人的負擔都減輕很多，我在這個團體裡負責的工<br/>作，主要就是處理圖檔的部分，依照組員討論出來，產<br/>品的外觀，去把它繪製出來，並且不斷地更新，我很榮<br/>幸，能為團隊帶來貢獻，這真的是很有成就感的事。</p>
+<h2>40823221 陳柏翰 </h2>
+<p>這學期分成了三個階段，在每一個<br/>階段都有學到東西，最後在w16 exam 裡面也算是對個人<br/>能力做個小測試，所以這學期能學到的絕對不只是程式<br/>語言或是CoppeliaSim 模擬這幾樣東西而已，反而可以學<br/>到該如何分工或是與團隊溝通等等的。最後想學程式的<br/>話英文真的滿重要的。</p>
+<h2>40823228 丁偉倫 </h2>
+<p>經過本學期的課程之後，讓我學到了非<br/>常多東西，從一開始的兩人小組在協同時，只需要跟一個<br/>組員溝通，到四人小組之後，在小組溝通及資料整理上，<br/>漸漸浮現的問題，到最後的八人小組任務時，不管是工作<br/>分配、資料整合上，難度都增加許多，但是如果小組內多<br/>溝通、多採納彼此不同的意見，在協同任務中，一定可以<br/>創造更好的自我價值，也會使自己的力量為團隊帶來極大<br/>的幫助，所以在協同任務中使我了解到團隊合作及工作分<br/>配的重要性。</p>
+<h2>40823237 吳青諭 </h2>
+<p>這學期的課程讓我知道學習寫程式的邏<br/>輯還有模擬很重要，因為可以方便做很多的事情，但英文<br/>更重要，看不懂英文要怎麼學程式語言呢，要釣魚也要先<br/>學會用釣竿。再來就是團隊合作的部分，主動、肯吃苦的<br/>人可能會辛苦一點，但收穫肯定也會跟辛苦、努力的程度<br/>成正比，那些消極的人沒收穫是他們的損失，抄來的終究<br/>是別人的。最後，謝謝老師的耐心指導，很多時候問老師<br/>問題，老師都不僅僅處理問題而已，還會花時間跟我們講<br/>解問題的根本及分享在程式裡的一些知識。</p>
+<h2>40823242 游子建 </h2>
+<p>這一學期我學到非常多東西，從一開<br/>始兩人小組我連COPPELIASIM 都不知如何使用，接著<br/>四人小組慢慢熟悉COPPELIASIM，到了九人小組也學到<br/>更多的東西，組員之間知識技能上的協助與教導，我也<br/>學會了如何使用LUA 和API 控制，而我認為我自己也<br/>有很多不足的地方，像是英文不好、程式語言懂得不夠<br/>多等，這些都是我需要加強的地方，感謝這學期的組員<br/>及老師的教導。</p>
+<h2>40823250 張哲瑀 </h2>
+<p>透過這學期的課程，在學習程式與<br/>軟體應用中必須花費相當多的心力及思考，其中團隊的<br/>幫助下，每個人分工合作達到盡自己所能在讓團隊進<br/>步，我也知道說在這當中我受別人的幫助算是較多的那<br/>位，但也沒有因為較弱而放棄對程式的了解，那麼8 人<br/>的任務確實跟2 人與4 人沒法比，至少在過程中都是盡<br/>可能試著去明白其中道理，˙也謝謝各位在這期間的幫<br/>助及努力，為這小團隊做了很多，謝謝各位的指教！</p>
+<h2>40832244 林晉廷</h2>
+<p>這學期學到了不少的新知識，但除<br/>了前兩次的分組能幫助隊伍，最後的分組就沒有我能幫<br/>助的，只能跟在大家後面學習!在W16 我學到了不少東<br/>西，但我的進度還是落後的。我的程度相對同學落後，<br/>看起來對團隊沒貢獻，但我會照著別人的操作跟著做，<br/>總比怠惰的人的上進。較可惜的是我github 被鎖，經過<br/>我無數次的發送意見反饋還是沒解封，很擔心我的成績<br/>沒救了。最後謝謝老師以及不幸跟我同組的同學，加重<br/>你們的工作量有很抱歉，也謝謝一路上幫助我課業的同<br/>學們，謝謝大家。</p>
 <h1>筆記</h1>
 <h2>coppelia啟動教學</h2>
 <p>如何開啟stl檔及基本教學</p>
