--- a/content/40823204 賴惟嘉.html
+++ b/content/40823204 賴惟嘉.html
@@ -2,7 +2,7 @@
         <head>
         <title>stage3-bg5</title>
         <meta charset="utf-8">
-<meta property="head" content="H1">
+<meta property="head" content="H2">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <link href="https://fonts.googleapis.com/css?family=Quicksand:300,400,500,700,900" rel="stylesheet">
         <link rel="stylesheet" href="./../cmsimde/static/chimper/fonts/icomoon/style.css">
@@ -134,9 +134,9 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">W15coppelia模擬 << <a href='W15coppelia模擬.html'>Previous</a> <a href='w12.html'>Next</a> >> w12<br /><h1>直播影片</h1>
-<p></p>
-<br />W15coppelia模擬 << <a href='W15coppelia模擬.html'>Previous</a> <a href='w12.html'>Next</a> >> w12</div>
+    <div id="tipue_search_content">小組個人心得 << <a href='小組個人心得.html'>Previous</a> <a href='40823205 李詩涵.html'>Next</a> >> 40823205 李詩涵<br /><h1>40823204 賴惟嘉</h1>
+<p>這學期學到了很多工具，包含<br/>coppelia 場景的建立以及許多程式的寫法，原本以為自<br/>己完蛋了，因為高中只學過如何畫圖卻沒接觸過程式和<br/>coppelia 這套工具，但是有努力終有成果，經過這幾週<br/>的洗禮，我也熟悉了這些操作，然後在程式的部分我還<br/>有不足處，還需要去學習，同時也很感謝40823214 教了<br/>我許多。</p>
+<br />小組個人心得 << <a href='小組個人心得.html'>Previous</a> <a href='40823205 李詩涵.html'>Next</a> >> 40823205 李詩涵</div>
         
     <!-- footer -->
       <div class="container">
