--- a/content/40823205 李詩涵.html
+++ b/content/40823205 李詩涵.html
@@ -2,7 +2,7 @@
         <head>
         <title>stage3-bg5</title>
         <meta charset="utf-8">
-<meta property="head" content="H1">
+<meta property="head" content="H2">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <link href="https://fonts.googleapis.com/css?family=Quicksand:300,400,500,700,900" rel="stylesheet">
         <link rel="stylesheet" href="./../cmsimde/static/chimper/fonts/icomoon/style.css">
@@ -134,9 +134,9 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">W15coppelia模擬 << <a href='W15coppelia模擬.html'>Previous</a> <a href='w12.html'>Next</a> >> w12<br /><h1>直播影片</h1>
-<p></p>
-<br />W15coppelia模擬 << <a href='W15coppelia模擬.html'>Previous</a> <a href='w12.html'>Next</a> >> w12</div>
+    <div id="tipue_search_content">40823204 賴惟嘉 << <a href='40823204 賴惟嘉.html'>Previous</a> <a href='40823220 黃彥維.html'>Next</a> >> 40823220 黃彥維<br /><h1>40823205 李詩涵</h1>
+<p>後期因為github 被鎖讓我摸索了很<br/>久，還是沒辦法解封，還好之後有fossil 能夠讓我再呈<br/>現我的網站出來，只是比較麻煩一點點而已，在這學期<br/>真的學到了很多東西，主要是CoppeliaSim，一開始看到<br/>是全英文讓我感到很害怕，但後來慢慢摸索就有懂一些<br/>了，英文真的很重要。在w16 的考試多虧有同學的幫助<br/>也學到了很多，雖然我的程式一直模擬不出來，但我還<br/>是反覆的做跟思考如何解決，並求助同學的幫忙，也謝<br/>謝組員們的幫助。</p>
+<br />40823204 賴惟嘉 << <a href='40823204 賴惟嘉.html'>Previous</a> <a href='40823220 黃彥維.html'>Next</a> >> 40823220 黃彥維</div>
         
     <!-- footer -->
       <div class="container">
