--- a/content/40823221 陳柏翰.html
+++ b/content/40823221 陳柏翰.html
@@ -2,7 +2,7 @@
         <head>
         <title>stage3-bg5</title>
         <meta charset="utf-8">
-<meta property="head" content="H1">
+<meta property="head" content="H2">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <link href="https://fonts.googleapis.com/css?family=Quicksand:300,400,500,700,900" rel="stylesheet">
         <link rel="stylesheet" href="./../cmsimde/static/chimper/fonts/icomoon/style.css">
@@ -134,9 +134,9 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">W15coppelia模擬 << <a href='W15coppelia模擬.html'>Previous</a> <a href='w12.html'>Next</a> >> w12<br /><h1>直播影片</h1>
-<p></p>
-<br />W15coppelia模擬 << <a href='W15coppelia模擬.html'>Previous</a> <a href='w12.html'>Next</a> >> w12</div>
+    <div id="tipue_search_content">40823220 黃彥維 << <a href='40823220 黃彥維.html'>Previous</a> <a href='40823228 丁偉倫.html'>Next</a> >> 40823228 丁偉倫<br /><h1>40823221 陳柏翰</h1>
+<p>這學期分成了三個階段，在每一個<br/>階段都有學到東西，最後在w16 exam 裡面也算是對個人<br/>能力做個小測試，所以這學期能學到的絕對不只是程式<br/>語言或是CoppeliaSim 模擬這幾樣東西而已，反而可以學<br/>到該如何分工或是與團隊溝通等等的。最後想學程式的<br/>話英文真的滿重要的。</p>
+<br />40823220 黃彥維 << <a href='40823220 黃彥維.html'>Previous</a> <a href='40823228 丁偉倫.html'>Next</a> >> 40823228 丁偉倫</div>
         
     <!-- footer -->
       <div class="container">
