--- a/content/40823228 丁偉倫.html
+++ b/content/40823228 丁偉倫.html
@@ -2,7 +2,7 @@
         <head>
         <title>stage3-bg5</title>
         <meta charset="utf-8">
-<meta property="head" content="H1">
+<meta property="head" content="H2">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <link href="https://fonts.googleapis.com/css?family=Quicksand:300,400,500,700,900" rel="stylesheet">
         <link rel="stylesheet" href="./../cmsimde/static/chimper/fonts/icomoon/style.css">
@@ -134,9 +134,9 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">W15coppelia模擬 << <a href='W15coppelia模擬.html'>Previous</a> <a href='w12.html'>Next</a> >> w12<br /><h1>直播影片</h1>
-<p></p>
-<br />W15coppelia模擬 << <a href='W15coppelia模擬.html'>Previous</a> <a href='w12.html'>Next</a> >> w12</div>
+    <div id="tipue_search_content">40823221 陳柏翰 << <a href='40823221 陳柏翰.html'>Previous</a> <a href='40823237 吳青諭.html'>Next</a> >> 40823237 吳青諭<br /><h1>40823228 丁偉倫</h1>
+<p>經過本學期的課程之後，讓我學到了非<br/>常多東西，從一開始的兩人小組在協同時，只需要跟一個<br/>組員溝通，到四人小組之後，在小組溝通及資料整理上，<br/>漸漸浮現的問題，到最後的八人小組任務時，不管是工作<br/>分配、資料整合上，難度都增加許多，但是如果小組內多<br/>溝通、多採納彼此不同的意見，在協同任務中，一定可以<br/>創造更好的自我價值，也會使自己的力量為團隊帶來極大<br/>的幫助，所以在協同任務中使我了解到團隊合作及工作分<br/>配的重要性。</p>
+<br />40823221 陳柏翰 << <a href='40823221 陳柏翰.html'>Previous</a> <a href='40823237 吳青諭.html'>Next</a> >> 40823237 吳青諭</div>
         
     <!-- footer -->
       <div class="container">
