--- a/content/40823237 吳青諭.html
+++ b/content/40823237 吳青諭.html
@@ -2,7 +2,7 @@
         <head>
         <title>stage3-bg5</title>
         <meta charset="utf-8">
-<meta property="head" content="H1">
+<meta property="head" content="H2">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <link href="https://fonts.googleapis.com/css?family=Quicksand:300,400,500,700,900" rel="stylesheet">
         <link rel="stylesheet" href="./../cmsimde/static/chimper/fonts/icomoon/style.css">
@@ -134,9 +134,9 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">W15coppelia模擬 << <a href='W15coppelia模擬.html'>Previous</a> <a href='w12.html'>Next</a> >> w12<br /><h1>直播影片</h1>
-<p></p>
-<br />W15coppelia模擬 << <a href='W15coppelia模擬.html'>Previous</a> <a href='w12.html'>Next</a> >> w12</div>
+    <div id="tipue_search_content">40823228 丁偉倫 << <a href='40823228 丁偉倫.html'>Previous</a> <a href='40823242 游子建.html'>Next</a> >> 40823242 游子建<br /><h1>40823237 吳青諭</h1>
+<p>這學期的課程讓我知道學習寫程式的邏<br/>輯還有模擬很重要，因為可以方便做很多的事情，但英文<br/>更重要，看不懂英文要怎麼學程式語言呢，要釣魚也要先<br/>學會用釣竿。再來就是團隊合作的部分，主動、肯吃苦的<br/>人可能會辛苦一點，但收穫肯定也會跟辛苦、努力的程度<br/>成正比，那些消極的人沒收穫是他們的損失，抄來的終究<br/>是別人的。最後，謝謝老師的耐心指導，很多時候問老師<br/>問題，老師都不僅僅處理問題而已，還會花時間跟我們講<br/>解問題的根本及分享在程式裡的一些知識。</p>
+<br />40823228 丁偉倫 << <a href='40823228 丁偉倫.html'>Previous</a> <a href='40823242 游子建.html'>Next</a> >> 40823242 游子建</div>
         
     <!-- footer -->
       <div class="container">
