--- a/content/40823242 游子建.html
+++ b/content/40823242 游子建.html
@@ -2,7 +2,7 @@
         <head>
         <title>stage3-bg5</title>
         <meta charset="utf-8">
-<meta property="head" content="H1">
+<meta property="head" content="H2">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <link href="https://fonts.googleapis.com/css?family=Quicksand:300,400,500,700,900" rel="stylesheet">
         <link rel="stylesheet" href="./../cmsimde/static/chimper/fonts/icomoon/style.css">
@@ -134,9 +134,9 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">W15coppelia模擬 << <a href='W15coppelia模擬.html'>Previous</a> <a href='w12.html'>Next</a> >> w12<br /><h1>直播影片</h1>
-<p></p>
-<br />W15coppelia模擬 << <a href='W15coppelia模擬.html'>Previous</a> <a href='w12.html'>Next</a> >> w12</div>
+    <div id="tipue_search_content">40823237 吳青諭 << <a href='40823237 吳青諭.html'>Previous</a> <a href='40823250 張哲瑀.html'>Next</a> >> 40823250 張哲瑀<br /><h1>40823242 游子建</h1>
+<p>這一學期我學到非常多東西，從一開<br/>始兩人小組我連COPPELIASIM 都不知如何使用，接著<br/>四人小組慢慢熟悉COPPELIASIM，到了九人小組也學到<br/>更多的東西，組員之間知識技能上的協助與教導，我也<br/>學會了如何使用LUA 和API 控制，而我認為我自己也<br/>有很多不足的地方，像是英文不好、程式語言懂得不夠<br/>多等，這些都是我需要加強的地方，感謝這學期的組員<br/>及老師的教導。</p>
+<br />40823237 吳青諭 << <a href='40823237 吳青諭.html'>Previous</a> <a href='40823250 張哲瑀.html'>Next</a> >> 40823250 張哲瑀</div>
         
     <!-- footer -->
       <div class="container">
