--- a/content/40823250 張哲瑀.html
+++ b/content/40823250 張哲瑀.html
@@ -2,7 +2,7 @@
         <head>
         <title>stage3-bg5</title>
         <meta charset="utf-8">
-<meta property="head" content="H1">
+<meta property="head" content="H2">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <link href="https://fonts.googleapis.com/css?family=Quicksand:300,400,500,700,900" rel="stylesheet">
         <link rel="stylesheet" href="./../cmsimde/static/chimper/fonts/icomoon/style.css">
@@ -134,9 +134,9 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">W15coppelia模擬 << <a href='W15coppelia模擬.html'>Previous</a> <a href='w12.html'>Next</a> >> w12<br /><h1>直播影片</h1>
-<p></p>
-<br />W15coppelia模擬 << <a href='W15coppelia模擬.html'>Previous</a> <a href='w12.html'>Next</a> >> w12</div>
+    <div id="tipue_search_content">40823242 游子建 << <a href='40823242 游子建.html'>Previous</a> <a href='40832244 林晉廷.html'>Next</a> >> 40832244 林晉廷<br /><h1>40823250 張哲瑀</h1>
+<p>透過這學期的課程，在學習程式與<br/>軟體應用中必須花費相當多的心力及思考，其中團隊的<br/>幫助下，每個人分工合作達到盡自己所能在讓團隊進<br/>步，我也知道說在這當中我受別人的幫助算是較多的那<br/>位，但也沒有因為較弱而放棄對程式的了解，那麼8 人<br/>的任務確實跟2 人與4 人沒法比，至少在過程中都是盡<br/>可能試著去明白其中道理，˙也謝謝各位在這期間的幫<br/>助及努力，為這小團隊做了很多，謝謝各位的指教！</p>
+<br />40823242 游子建 << <a href='40823242 游子建.html'>Previous</a> <a href='40832244 林晉廷.html'>Next</a> >> 40832244 林晉廷</div>
         
     <!-- footer -->
       <div class="container">
