--- a/content/40832244 林晉廷.html
+++ b/content/40832244 林晉廷.html
@@ -2,7 +2,7 @@
         <head>
         <title>stage3-bg5</title>
         <meta charset="utf-8">
-<meta property="head" content="H1">
+<meta property="head" content="H2">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <link href="https://fonts.googleapis.com/css?family=Quicksand:300,400,500,700,900" rel="stylesheet">
         <link rel="stylesheet" href="./../cmsimde/static/chimper/fonts/icomoon/style.css">
@@ -134,9 +134,9 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">W15coppelia模擬 << <a href='W15coppelia模擬.html'>Previous</a> <a href='w12.html'>Next</a> >> w12<br /><h1>直播影片</h1>
-<p></p>
-<br />W15coppelia模擬 << <a href='W15coppelia模擬.html'>Previous</a> <a href='w12.html'>Next</a> >> w12</div>
+    <div id="tipue_search_content">40823250 張哲瑀 << <a href='40823250 張哲瑀.html'>Previous</a> <a href='筆記.html'>Next</a> >> 筆記<br /><h1>40832244 林晉廷</h1>
+<p>這學期學到了不少的新知識，但除<br/>了前兩次的分組能幫助隊伍，最後的分組就沒有我能幫<br/>助的，只能跟在大家後面學習!在W16 我學到了不少東<br/>西，但我的進度還是落後的。我的程度相對同學落後，<br/>看起來對團隊沒貢獻，但我會照著別人的操作跟著做，<br/>總比怠惰的人的上進。較可惜的是我github 被鎖，經過<br/>我無數次的發送意見反饋還是沒解封，很擔心我的成績<br/>沒救了。最後謝謝老師以及不幸跟我同組的同學，加重<br/>你們的工作量有很抱歉，也謝謝一路上幫助我課業的同<br/>學們，謝謝大家。</p>
+<br />40823250 張哲瑀 << <a href='40823250 張哲瑀.html'>Previous</a> <a href='筆記.html'>Next</a> >> 筆記</div>
         
     <!-- footer -->
       <div class="container">
