--- a/content/40823220 黃彥維.html
+++ b/content/40823220 黃彥維.html
@@ -2,7 +2,7 @@
         <head>
         <title>stage3-bg5</title>
         <meta charset="utf-8">
-<meta property="head" content="H1">
+<meta property="head" content="H2">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <link href="https://fonts.googleapis.com/css?family=Quicksand:300,400,500,700,900" rel="stylesheet">
         <link rel="stylesheet" href="./../cmsimde/static/chimper/fonts/icomoon/style.css">
@@ -134,9 +134,9 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">W15coppelia模擬 << <a href='W15coppelia模擬.html'>Previous</a> <a href='w12.html'>Next</a> >> w12<br /><h1>直播影片</h1>
-<p></p>
-<br />W15coppelia模擬 << <a href='W15coppelia模擬.html'>Previous</a> <a href='w12.html'>Next</a> >> w12</div>
+    <div id="tipue_search_content">40823205 李詩涵 << <a href='40823205 李詩涵.html'>Previous</a> <a href='40823221 陳柏翰.html'>Next</a> >> 40823221 陳柏翰<br /><h1>40823220 黃彥維</h1>
+<p>經過這學期的洗禮，我學會了是<br/>CoppeliaSim 以及Onshape 這兩套軟體，還有Lua 跟Py<br/>thon 程式的基本認知，還有更多的附加知識，例如<br/>Youtobe 的剪片上字幕，產品商業化會遇到的問題等<br/>等，但最重要的就是團隊合作，讓我們整體的工作，對<br/>每個人的負擔都減輕很多，我在這個團體裡負責的工<br/>作，主要就是處理圖檔的部分，依照組員討論出來，產<br/>品的外觀，去把它繪製出來，並且不斷地更新，我很榮<br/>幸，能為團隊帶來貢獻，這真的是很有成就感的事。</p>
+<br />40823205 李詩涵 << <a href='40823205 李詩涵.html'>Previous</a> <a href='40823221 陳柏翰.html'>Next</a> >> 40823221 陳柏翰</div>
         
     <!-- footer -->
       <div class="container">
