--- a/reveal/index.html
+++ b/reveal/index.html
@@ -121,7 +121,7 @@
         </section>
         <section>
            <h2>CoppeliaSimEdu_4.1.0模擬</h2>
-        </section>
+           </section>
            <section>
            <h4>使用coppeliasim做初步模擬+lua控制</h4>
            <h5>說明:在場景中做初步的零件連接，並利用lua控制車子前進，但因為連接軸的問題，車子目前只能做前後移動和上下調整角度</h5>
@@ -129,7 +129,7 @@
            </section>
            <section>
            <h4>將車子的連接方式改變，使其能夠轉彎</h4>
-           <h5>因為原本車子輪胎是前後輪為一體的，為了不再修改圖面，使用coppeliasim內建功能toggle shape edit mode,把四個輪胎分開後並分別接上各個連接軸</h5>
+           <h5>說明:因原本車子輪胎是前後輪為一體的，為了不再修改圖面，使用coppeliasim內建功能toggle shape edit mode,把四個輪胎分開後並分別接上各個連接軸</h5>
            <p><iframe width="560" height="315" src="https://www.youtube.com/embed/ezSKHlxZ1FI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></p>
            </section>
            <section>
